update libraries to be up to date

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -20,7 +20,5 @@ repositories {
 }
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile "com.google.guava:guava:17.0"
+    compile 'com.google.guava:guava:23.3-android'
 }
