--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
 }
@@ -32,63 +33,63 @@ buildscript {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile "commons-io:commons-io:2.4"
-    testCompile "com.android.tools.build:gradle:2.0.0"
-    testCompile "org.scala-lang:scala-compiler:2.11.7"
+    compile "commons-io:commons-io:2.6"
+    testCompile "com.android.tools.build:gradle:3.0.0"
+    testCompile "org.scala-lang:scala-compiler:2.11.11"
 }
 
 description "Gradle Android Scala Plugin adds scala language support to official gradle android plugin."
 group = "jp.leafytree.gradle"
 version = "1.5-SNAPSHOT"
-sourceCompatibility = JavaVersion.VERSION_1_6
-targetCompatibility = JavaVersion.VERSION_1_6
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 def uploadToSonatypeRepository = hasProperty("sonatypeUserName")
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            snapshotRepository(url: uri("gh-pages/repository/snapshot"))
-
-            if (uploadToSonatypeRepository) {
-                def repositoryUrl = version.endsWith("-SNAPSHOT") ? "https://oss.sonatype.org/content/repositories/snapshots"
-                                                                  : "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-                repository(url: repositoryUrl) {
-                    authentication(userName: sonatypeUserName, password: sonatypePassword)
-                }
-                pom.project {
-                    name "Gradle Android Scala Plugin"
-                    packaging "jar"
-                    description project.description
-                    url "https://github.com/saturday06/gradle-android-scala-plugin"
-
-                    scm {
-                        url "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
-                        connection "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
-                        developerConnection "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
-                    }
-
-                    licenses {
-                        license {
-                            name "The Apache Software License, Version 2.0"
-                            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
-                            distribution "repo"
-                        }
-                    }
-
-                    developers {
-                        developer {
-                            id "saturday06"
-                            name "Isamu Mogi"
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+//uploadArchives {
+//    repositories {
+//        mavenDeployer {
+//            snapshotRepository(url: uri("gh-pages/repository/snapshot"))
+//
+//            if (uploadToSonatypeRepository) {
+//                def repositoryUrl = version.endsWith("-SNAPSHOT") ? "https://oss.sonatype.org/content/repositories/snapshots"
+//                                                                  : "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+//                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+//
+//                repository(url: repositoryUrl) {
+//                    authentication(userName: sonatypeUserName, password: sonatypePassword)
+//                }
+//                pom.project {
+//                    name "Gradle Android Scala Plugin"
+//                    packaging "jar"
+//                    description project.description
+//                    url "https://github.com/saturday06/gradle-android-scala-plugin"
+//
+//                    scm {
+//                        url "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
+//                        connection "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
+//                        developerConnection "scm:git@github.com:saturday06/gradle-android-scala-plugin.git"
+//                    }
+//
+//                    licenses {
+//                        license {
+//                            name "The Apache Software License, Version 2.0"
+//                            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
+//                            distribution "repo"
+//                        }
+//                    }
+//
+//                    developers {
+//                        developer {
+//                            id "saturday06"
+//                            name "Isamu Mogi"
+//                        }
+//                    }
+//                }
+//            }
+//        }
+//    }
+//}
 
 task groovydocJar(type: Jar, dependsOn: groovydoc) {
     from groovydoc.destinationDir
